# piket

./: .gitignore  CMakeLists.txt  README.md  flake.nix  pyproject.toml
.github/workflows/: publish.yml
docs/: 12-PLX1.raw  usage_guide.md
src/piket/: __init__.py  card.py  constants.py
src/piket/base/: level_base.py
src/piket/connecting_pikmin/: level.py  object.py  piki.py  tile.py
src/piket/marching_pikmin/: __init__.py  level.py  piki.py  tile.py
src/piket/plucking_pikmin/: level.py  piki.py  player.py  tile.py
src/piket/treasure/: treasure.py
src/piket/util/: __init__.py  decode.py  encode.py
