[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piket"
version = "0.1.0"
description = "Pikmin e+ Card Tools"
authors = [{ name = "plxl" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
piket = ["bin/*"]
