[build-system]
requires = ["setuptools>=61.0", "scikit-build-core>=0.9.0", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "piket"
version = "0.2.1"
description = "Pikmin e+ Card Tools, a library for manipulating Pikmin e+ cards"
authors = [{ name = "plxl" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pillow==12.0.0"]

[project.optional-dependencies]
demo = ["tkinterdnd2==0.4.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
piket = ["bin/*/**", "lib/*/**"]

# Add scikit-build-core config
[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build"
wheel.packages = ["src/piket"]

